--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
 .DS_Store
+-workshop
+.htaccess
+index.php
+license.txt
+readme.html
+README.md
+wp-activate.php
+wp-admin
+wp-blog-header.php
+wp-comments-post.php
+wp-config.php
+wp-cron.php
+wp-includes
+wp-links-opml.php
+wp-load.php
+wp-login.php
+wp-mail.php
+wp-settings.php
+wp-signup.php
+wp-trackback.php
+xmlrpc.php
