Ignore uploads folder/s

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ wp-content/languages
 wp-content/plugins
 wp-content/themes/twentyfifteen
 wp-content/themes/twentyfourteen
+wp-content/uploads
 wp-cron.php
 wp-includes
 wp-links-opml.php
