--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@ wp-comments-post.php
 wp-config-sample.php
 wp-config.php
 wp-content/languages
-wp-content/plugins
 wp-content/themes/twentyfifteen
 wp-content/themes/twentyfourteen
 wp-content/uploads
@@ -27,3 +26,5 @@ wp-settings.php
 wp-signup.php
 wp-trackback.php
 xmlrpc.php
+wp-content/plugins/acf-flexible-content
+wp-content/plugins/advanced-custom-fields
